# twoboring

./: .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md  cadence.config.example.yaml  pyproject.toml
cadence/: __init__.py  cli.py  config.py  doctor.py  geometry.py  humanize.py  loop.py  planner.py  runlog.py  safety.py  types.py
cadence/backends/: __init__.py  adb.py  base.py
cadence/providers/: __init__.py  base.py  gemini.py
docs/: ARCHITECTURE.md  CONFIGURATION.md  HUMANIZATION.md  INSTALL.md  PROFILES.md  PROVIDERS.md  SAFETY.md  TASKS.md
profiles/: example.yaml
tests/: test_config.py  test_gemini_build.py  test_geometry.py  test_humanize.py  test_planner.py  test_provider_parse.py  test_safety.py
